as mentioned, we were updating the servlet container from jetty to tomcat